--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL="mongodb+srv://venomnvn:4WiZsBIgRP94yqa8@cluster0.ne2cxnd.mongodb.net/server"
+MONGO_URL="mongodb+srv://venomnvn:4WiZsBIgRP94yqa8@cluster0.ne2cxnd.mongodb.net/hackfed"
 # MONGO_URL="mongodb://localhost:27017"
 PORT=5000
 
